# kuwaBot

./: .gitignore  LICENSE  README.md  index.js  index.ts  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
client/: index.js  index.ts
handler/: index.js  index.ts
tts/: CArgo.toml
tts/pkg/: package.json  tts_api.d.ts  tts_api.js  tts_api_bg.js  tts_api_bg.wasm  tts_api_bg.wasm.d.ts
tts/src/: lib.rs
